k8s/jenkins/jenkins-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
